# FashionMatch

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py
config/: __init__.py  config.example.yaml  logging.yaml
data/chroma/: .gitkeep
data/references/: .gitkeep
data/scraped/images/: .gitkeep
data/scraped/metadata/: .gitkeep
docs/: .gitkeep  API.md  ARCHITECTURE.md  SETUP.md  USAGE.md
examples/: run_embedding_pipeline.py
logs/: .gitkeep
notebooks/: .gitkeep  README.md
scripts/: .gitkeep  demo_ai.py  scrape_test.py  test_db.py
src/: __init__.py
src/core/: README_pipeline.md  __init__.py  embedding_pipeline.py  scorer.py
src/core/encoders/: __init__.py  base_encoder.py  clip_encoder.py  dino_encoder.py  hybrid_encoder.py
src/core/pipelines/: __init__.py  embedding_pipeline.py  recommendation_pipeline.py
src/core/scoring/: __init__.py  feedback_optimizer.py  similarity.py  weighted_scorer.py
src/core/use_cases/: __init__.py  add_reference.py  get_recommendations.py  process_feedback.py
src/database/: README.md  __init__.py  exceptions.py  models.py  vector_store.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  clothing_item.py  embedding.py  user_preference.py
src/domain/interfaces/: __init__.py  encoder_interface.py  repository_interface.py  scraper_interface.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  chroma_repository.py  collections.py  migrations.py
src/infrastructure/scraper/: __init__.py  rate_limiter.py  vinted_scraper.py
src/infrastructure/scraper/parsers/: __init__.py  item_parser.py  listing_parser.py
src/scraper/: README.md  __init__.py  cli.py  exceptions.py  models.py  parsers.py  storage.py  utils.py  vinted_scraper.py
src/ui/: README.md  __init__.py  app.py  state_manager.py  styles.py  utils.py
src/ui/components/: __init__.py  feedback_buttons.py  filters.py  image_card.py  item_card.py  similarity_meter.py  stats_panel.py  weight_display.py
src/ui/pages/: 01_upload.py  02_browse.py  03_settings.py  __init__.py
src/ui/state/: __init__.py  session_manager.py
src/utils/: __init__.py  config.py  exceptions.py  image_utils.py  image_validation.py  logger.py  performance.py  validators.py
tests/: __init__.py  conftest.py  test_config.yaml
tests/fixtures/sample_images/: .gitkeep
tests/integration/: __init__.py  test_database.py  test_embedding_pipeline.py  test_pipeline.py  test_search_workflow.py  test_ui_components.py
tests/unit/: __init__.py  test_clip_encoder.py  test_config.py  test_dino_encoder.py  test_encoders.py  test_image_utils.py  test_parsers.py  test_scorer.py  test_vector_store.py
